 cnp-pci-dss-1.3.3-egress-uk1c0xm.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-pci-dss-1.3.3-egress-2xqkw4s
  namespace: kube-system
spec:
  description: "This policy will allow outbound connection using kube-dns in port 53"
  endpointSelector:
    matchLabels:
      controller-revision-hash: 6c4b5bcf94
      kubearmor-app: kubearmor
      pod-template-generation: 1
  egress:
    - toEntities:
        - cluster
    - toEndpoints:
        - matchLabels:
  namespace: kube-system
